属性の必須チェック追加

--- a/app/views/stock_products/new.html.erb
+++ b/app/views/stock_products/new.html.erb
@@ -1,2 +1,2 @@
-<%= render 'stock_products/form', url: "/stock_products", stock_product: @stock_product, title: "新規#{StockProduct.model_name.human}" %>
+<%= render 'stock_products/form', back_url: stock_products_path, url: "/stock_products", stock_product: @stock_product, title: "新規#{StockProduct.model_name.human}" %>
 
