--- a/app/views/chartered_stock_products/edit.html.erb
+++ b/app/views/chartered_stock_products/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render 'stock_products/form', url: "/stock_products/#{@stock_product.stock_product.id}/chartered_stock_products/#{@stock_product.id}", stock_product: @stock_product, title: "チャーター品編集" %>
+<%= render 'stock_products/form', back_url: chartered_stock_products_path, url: "/stock_products/#{@stock_product.stock_product.id}/chartered_stock_products/#{@stock_product.id}", stock_product: @stock_product, title: "チャーター品編集" %>
