--- a/app/views/chartered_stock_products/new.html.erb
+++ b/app/views/chartered_stock_products/new.html.erb
@@ -1,2 +1,2 @@
-<%= render 'stock_products/form', url: "/stock_products/#{@source.id}/chartered_stock_products", stock_product: @stock_product, title: "新規チャーター品" %>
+<%= render 'stock_products/form', back_url: chartered_stock_products_path, url: "/stock_products/#{@source.id}/chartered_stock_products", stock_product: @stock_product, title: "新規チャーター品" %>
 
