--- a/app/views/stock_products/_form.html.erb
+++ b/app/views/stock_products/_form.html.erb
@@ -2,7 +2,7 @@
 <div id="app">
 <%= simple_form_for stock_product, url: url, html: { multipart: true } do |f| %>
   <%= f.button :submit, class: 'float-right btn btn-primary' %>
-  <%= link_to '<戻る', stock_products_path, class: 'btn btn-outline-primary', style: 'margin-bottom: 10px' %>
+  <%= link_to '<戻る', back_url, class: 'btn btn-outline-primary', style: 'margin-bottom: 10px' %>
     <h3><%= title %></h3>
 
   <%= render "stock_products/product", product: @product if @product %>
@@ -69,7 +69,8 @@
   <div>
     <div class="form-group row" v-for="(spsp, index) in stock_product_stored_props" v-show="!spsp._destroy">
       <div class="col-md-4">
-        <input type="text" placeholder="タイトル" v-model="spsp.stored_prop.name" :name="`stock_product[stock_product_${collection_name}_attributes][${index}][stored_prop_attributes][name]`" class="form-control string required" :readonly="charter && spsp.charterable" required>
+        <input type="text" placeholder="タイトル" v-model="spsp.stored_prop.name" :name="`stock_product[stock_product_${collection_name}_attributes][${index}][stored_prop_attributes][name]`" class="form-control string required" :readonly="!!spsp.stored_prop.source_id" :area-invalid="!spsp.stored_prop.name" :class="{'is-valid': spsp.stored_prop.name, 'is-invalid': !spsp.stored_prop.name}" required>
+        <div class="invalid-feedback" v-show="!spsp.stored_prop.name">タイトルを入力してください。</div>
       </div>
       <div class="col-md-4">
         <slot :spsp="spsp" :index="index"></slot>
@@ -84,7 +85,7 @@
           </div>
         </fieldset>
         <fieldset class="form-group boolean optional">
-          <div v-if="spsp.charterable || !charter" class="form-check">
+          <div v-if="spsp.stored_prop.source_id || spsp.charterable" class="form-check">
             <input :name="`stock_product[stock_product_${collection_name}_attributes][${index}][charterable]`" type="hidden" value="0" :disabled="!!spsp.stored_prop.source_id">
             <input type="checkbox" v-model="spsp.charterable" :name="`stock_product[stock_product_${collection_name}_attributes][${index}][charterable]`" :id="`stock_product_stock_product_${collection_name}_attributes_${index}_charterable`" class="form-check-input boolean optional" :disabled="!!spsp.stored_prop.source_id">
             <label :for="`stock_product_stock_product_${collection_name}_attributes_${index}_charterable`" class="form-check-label boolean optional">
@@ -107,10 +108,11 @@
 <script id="text_props_tmpl" type="text/html">
   <stored-props :charter="charter" :init_stock_product_stored_props="stock_product_text_props" :collection_name="collection_name" :display_name="display_name">
     <template v-slot:default="slotProp">
-      <textarea placeholder="URL" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_attributes][text_content]`" class="form-control text required" v-model="slotProp.spsp.stored_prop.text_content" :readonly="charter && slotProp.spsp.charterable" required> </textarea>
+      <textarea placeholder="URL" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_attributes][text_content]`" class="form-control text required" v-model="slotProp.spsp.stored_prop.text_content" :readonly="!!slotProp.spsp.stored_prop.source_id" :area-invalid="!slotProp.spsp.stored_prop.text_content" :class="{'is-valid': slotProp.spsp.stored_prop.text_content, 'is-invalid': !slotProp.spsp.stored_prop.text_content}" required> </textarea>
       <input type="hidden" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_attributes][source_id]`" v-model="slotProp.spsp.stored_prop.source_id">
       <input type="hidden" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_attributes][id]`" v-model="slotProp.spsp.stored_prop.id">
       <input value="TextProp" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_type]`" type="hidden">
+      <div class="invalid-feedback" v-show="!slotProp.spsp.stored_prop.text_content">URLを入力してください。</div>
     </template>
   </stored-props>
 </script>
@@ -119,11 +121,12 @@
   <stored-props :charter="charter" :init_stock_product_stored_props="stock_product_file_props" :collection_name="collection_name" :display_name="display_name">
     <template v-slot:default="slotProp">
       <div>{{ displayFileName(slotProp.spsp) }}</div>
-      <button v-show="!charter || !slotProp.spsp.charterable" type="button" class="btn btn-primary" @click="uploadFile(slotProp.spsp, slotProp.index)">アップロード</button>
+      <button v-show="!slotProp.spsp.stored_prop.source_id" type="button" class="btn btn-primary" @click="uploadFile(slotProp.spsp, slotProp.index)">アップロード</button>
       <input :id="`file_prop_file_${slotProp.index}`" v-model="slotProp.spsp.stored_prop.file" class="form-control-file file optional" type="file" :name="`stock_product[stock_product_file_props_attributes][${slotProp.index}][stored_prop_attributes][file]`" style="display: none;" @change="onFileChange($event, slotProp.spsp, slotProp.index)" :disabled="!!slotProp.spsp.stored_prop.source_id" required>
       <input type="hidden" :name="`stock_product[stock_product_file_props_attributes][${slotProp.index}][stored_prop_attributes][source_id]`" v-model="slotProp.spsp.stored_prop.source_id">
       <input type="hidden" :name="`stock_product[stock_product_file_props_attributes][${slotProp.index}][stored_prop_attributes][id]`" v-model="slotProp.spsp.stored_prop.id">
       <input value="FileProp" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_type]`" type="hidden">
+      <div class="invalid-feedback" style="display: block;" v-show="!slotProp.spsp.stored_prop.file_name">ファイルをアップロードしてください。</div>
     </template>
   </stored-props>
 </script>
@@ -132,11 +135,12 @@
   <stored-props :charter="charter" :init_stock_product_stored_props="stock_product_image_props" :collection_name="collection_name" :display_name="display_name">
     <template v-slot:default="slotProp">
       <div>{{ displayFileName(slotProp.spsp) }}</div>
-      <button v-show="!charter || !slotProp.spsp.charterable" type="button" class="btn btn-primary" @click="uploadImage(slotProp.spsp, slotProp.index)">アップロード</button>
+      <button v-show="!slotProp.spsp.stored_prop.source_id" type="button" class="btn btn-primary" @click="uploadImage(slotProp.spsp, slotProp.index)">アップロード</button>
       <input :id="`image_prop_image_${slotProp.index}`" v-model="slotProp.spsp.stored_prop.image" class="form-control-file file optional" type="file" :name="`stock_product[stock_product_image_props_attributes][${slotProp.index}][stored_prop_attributes][image]`" style="display: none;" @change="onFileChange($event, slotProp.spsp, slotProp.index)" :disabled="!!slotProp.spsp.stored_prop.source_id" required>
       <input type="hidden" :name="`stock_product[stock_product_image_props_attributes][${slotProp.index}][stored_prop_attributes][source_id]`" v-model="slotProp.spsp.stored_prop.source_id">
       <input type="hidden" :name="`stock_product[stock_product_image_props_attributes][${slotProp.index}][stored_prop_attributes][id]`" v-model="slotProp.spsp.stored_prop.id">
       <input value="ImageProp" :name="`stock_product[stock_product_${collection_name}_attributes][${slotProp.index}][stored_prop_type]`" type="hidden">
+      <div class="invalid-feedback" style="display: block;" v-show="!slotProp.spsp.stored_prop.file_name">画像をアップロードしてください。</div>
     </template>
   </stored-props>
 </script>
@@ -296,9 +300,15 @@ var app = new Vue({
     })
     data.stock_product_file_props.forEach(function(fp) {
       fp._destroy = false
+      if (!fp.stored_prop.source_id && !fp.stored_prop.id) {
+        fp.stored_prop.file_name = ''
+      }
     })
     data.stock_product_image_props.forEach(function(fp) {
       fp._destroy = false
+      if (!fp.stored_prop.source_id && !fp.stored_prop.id) {
+        fp.stored_prop.file_name = ''
+      }
     })
 
     return data
