--- a/app/views/stock_products/edit.html.erb
+++ b/app/views/stock_products/edit.html.erb
@@ -1,1 +1,1 @@
-<%= render 'stock_products/form', url: "/stock_products/#{@stock_product.id}", stock_product: @stock_product, title: "#{StockProduct.model_name.human}編集" %>
+<%= render 'stock_products/form', back_url: stock_products_path, url: "/stock_products/#{@stock_product.id}", stock_product: @stock_product, title: "#{StockProduct.model_name.human}編集" %>
