--- a/app/views/other_stock_products/index.html.erb
+++ b/app/views/other_stock_products/index.html.erb
@@ -40,7 +40,7 @@
         <td><%= stock_product.product.description_b %></td>
         <td><%= stock_product.company&.name %></td>
         <td>
-          <% if stock_product.charterable && stock_product.stock_product_id.blank? %>
+          <% if can?(:create, StockProduct) && stock_product.charterable && stock_product.stock_product_id.blank? %>
             <%= link_to new_stock_product_chartered_stock_product_path(stock_product_id: stock_product.id) do %>
               チャーターする
             <% end %>
