--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,6 +7,9 @@
     <%= f.input :id, wrapper: :horizontal_plaintext unless f.object.new_record? %>
       <%= f.input :product_code %>
       <%= f.input :product_name %>
+      <%= f.input :product_short_name %>
+      <%= f.input :product_model_name %>
+      <%= f.input :manufacture_name %>
       <%= f.input :title %>
       <%= f.input :netis %>
       <%= f.input :netis_limit_date %>
