--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -11,6 +11,18 @@
     <td><%= @product.product_code %></td>
   </tr>
   <tr>
+    <th><%= Project.human_attribute_name :product_name %></th>
+    <td><%= @product.product_name %></td>
+  </tr>
+  <tr>
+    <th><%= Project.human_attribute_name :product_short_name %></th>
+    <td><%= @product.product_short_name %></td>
+  </tr>
+  <tr>
+    <th><%= Project.human_attribute_name :manufacture_name %></th>
+    <td><%= @product.manufacture_name %></td>
+  </tr>
+  <tr>
     <th><%= Project.human_attribute_name :title %></th>
     <td><%= @product.title %></td>
   </tr>
