issue #25 会社削除時にユーザー一覧表示でエラーにならないように

--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -41,7 +41,7 @@
     <% @staffs.each do |staff| %>
       <tr>
         <td><%= staff.id %></td>
-        <td><%= staff.company.name %></td>
+        <td><%= staff.company&.name || '-削除済-' %></td>
         <td><%= staff.login_name %></td>
         <td><%= staff.name %></td>
         <td><%= staff.staff_role %></td>
